syntax = "proto3";

package orderpb;

option go_package = "/pb";

message CreateOrderRequest {
    string id = 1;
    string user_id = 2;
    string product_id = 3;
    int32 quantity = 4;
}

message CreateOrderResponse {
    string id = 1;
}

message GetOrderRequest {
    string id = 1;
}

message GetOrderResponse {
    string id = 1;
    string user_id = 2;
    string product_id = 3;
    int32 quantity = 4;
}

message GetProductsByUserIDRequest {
    string user_id = 1;
}

message GetProductsByUserIDResponse {
    repeated Product products = 1;
}

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
    rpc GetProductsByUserID(GetProductsByUserIDRequest) returns (GetProductsByUserIDResponse);
}
